fixed: map not visible on chrome

--- a/Public/CSS/map.css
+++ b/Public/CSS/map.css
@@ -13,3 +13,7 @@
 #tooltipText {
     fill: white;
 }
+
+#romanian_map{
+    width: 100%;
+}
